--- a/kadai3_work_1/index.html
+++ b/kadai3_work_1/index.html
@@ -13,12 +13,11 @@
 
     <script>
         let num = 0;
-        for (i = 1; i <= 10;) {
+        for (i = 1; i <= 10; i++) {
             num = num + i;
-            i = i + 1
         }
 
-        if (num > 20) {
+        if (num >= 20) {
             console.log("20以上");
         } else if (num < 20) {
             console.log("20未満")
