--- a/kadai4_work_1/index.html
+++ b/kadai4_work_1/index.html
@@ -8,18 +8,48 @@
     <title>デザインカフェ2</title>
     <meta name="description" content="デザインカフェのサイトです。">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
 </head>
 
 <body>
+    <!-- jquery -->
+    <script>
+        $(function () {
+            $('.sp_btn,.sp_nav li').on('click', function () {
+                $('.sp_nav').fadeToggle();
+                $('.sp_btn').toggleClass('open');
+                // spボタンにopen classをつけたり外したりしたいので上記を追加
+            });
+        });
+    </script>
     <!-- ヘッダー泉先生と作成 -->
+
     <header>
         <div id="header" class="header_slider">
-            <div><img src="images/pc_first-100.jpg" alt="店内の様子"></div>
+            <div>
+                <!-- pictureタグ -->
+                <!-- sp版の時に画像を切り替える -->
+                <picture>
+                    <source srcset="images/sp_main_vs@2x-100.jpg" media="(max-width: 767px)">
+                    <img src="images/pc_first-100.jpg" alt="店内の様子">
+                </picture>
+            </div>
         </div>
         <div class="header_wrap">
             <h1 class="header_logo"><img src="images/design_cafe_logo_header@2x.png" alt="DESIGNCAFE"></h1>
             <nav class="pc_nav">
+                <ul>
+                    <li><a href="#about">ABOUT US</a></li>
+                    <li><a href="#menu">MENU</a></li>
+                    <li><a href="#gallery">GALLERY</a></li>
+                    <li><a href="#event">EVENT</a></li>
+                    <li><a href="#access">ACCESS</a></li>
+                </ul>
+            </nav>
+
+            <div class="sp_btn "><span></span></div>
+            <nav class="sp_nav">
                 <ul>
                     <li><a href="#about">ABOUT US</a></li>
                     <li><a href="#menu">MENU</a></li>
@@ -38,15 +68,21 @@
     <div class="lead">
         <p class="lead_top">Have a happy day From a cup of coffee.</p>
         <p class="lead_body">ハッピーに溢れる1日を<br>1杯のコーヒーから。</p>
-        <p class="lead_foot">毎日を丁寧に大切に過ごしたい。だからこそ一杯一杯丁寧にコーヒーを入れ<br>足を運んでくれるお客さんには落ち着く空間とこだわりのコーヒーを提供したい。</p>
+        <p class="lead_foot">毎日を丁寧に大切に過ごしたい。<br class="lead_sp_only"> だからこそ一杯一杯丁寧にコーヒーを入れ<br>足を運んでくれるお客さんには落ち着く空間と<br
+                class="lead_sp_only">こだわりのコーヒーを提供したい。</p>
     </div>
 
     <!-- about -->
     <section id="about" class="about">
+        <div class="about_sp_only">
+            <h2><img src="images/about_us@2x.png" alt="aboutus">
+            </h2>
+        </div>
         <!-- altを入れること -->
         <div class="about_img"><img src="images/pc_about-100.jpg" alt="3つのコーヒー">
         </div>
-
+        <div class="about_img_sp"><img src="images/about_us@2x-100.jpg" alt="3つのコーヒー">
+        </div>
         <div class="about_wrap">
             <h2><img src="images/about_us@2x.png" alt="aboutus">
             </h2>
@@ -54,9 +90,15 @@
             <p class="about_heading">私たちが提供する<br>こだわりのコーヒー
             </p>
             <p class="about_text">
-                サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。
+                サービスを提供する上での想いや心がけているこ<br class="about_text_only"> となど、メッセージを文章で紹介します。サービスを<br
+                    class="about_text_only">提供する上での想いや心がけていることなど、メッ<br
+                    class="about_text_only">セージを文章で紹介します。サービスを提供する上<br
+                    class="about_text_only">での想いや心がけていることなど、メッセージを文<br class="about_text_only">章で紹介します。サービスを提供する上での想い<br
+                    class="about_text_only">や心がけていることなど、メッセージを文章で紹介<br class="about_text_only">します。サービスを提供する上での想いや心がけ<br
+                    class="about_text_only">ていることなど、メッセージを文章で紹介します。
             </p>
         </div>
+
     </section>
 
 
