ポートフォリオ第３回

--- a/portfolio_morio_coding/about/index.html
+++ b/portfolio_morio_coding/about/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>森尾世里子｜portfolios</title>
+    <title>ABOUT｜森尾世里子</title>
     <meta name="description" content="森尾世里子のポートフォリオです。">
     <link rel="shortcut icon" href="../android-chrome-192x192.png">
     <link rel="apple-touch-icon" href="../android-chrome-192x192.pngapple-touch-icon.png">
@@ -29,12 +29,12 @@
                 <h1 class="header_logo"><img src="images/rogo.png" alt="morio portfolio site."></h1>
                 <nav class="pc_nav">
                     <ul>
-                        <li><a href="#home"><img src="images/home_top.png" alt="home"></a></li>
-                        <li><a href="#concept"><img src="images/concept_top.png" alt="concept"></a></li>
-                        <li><a href="#works"><img src="images/works_top.png" alt="works"></a></li>
-                        <li><a href="#skill"><img src="images/skill_top.png" alt="skill"></a></li>
-                        <li><a href="#about"><img src="images/about_top.png" alt="about"></a></li>
-                        <li><a href="#contact"><img src="images/contact_top.png" alt="contact"></a></li>
+                        <li><a href="../index.html"><img src="images/home_top.png" alt="home"></a></li>
+                        <li><a href="../index.html#concept"><img src="images/concept_top.png" alt="concept"></a></li>
+                        <li><a href="../index.html#home-works"><img src="images/works_top.png" alt="works"></a></li>
+                        <li><a href="../index.html#skill"><img src="images/skill_top.png" alt="skill"></a></li>
+                        <li><a href="../index.html#about"><img src="images/about_top.png" alt="about"></a></li>
+                        <li><a href="../index.html#contact"><img src="images/contact_top.png" alt="contact"></a></li>
                     </ul>
                 </nav>
             </div>
