--- a/portfolio_morio_coding/index.html
+++ b/portfolio_morio_coding/index.html
@@ -30,12 +30,11 @@
                 <nav class="pc_nav">
                     <ul>
                         <li><a href="#home"><img src="images/home_top.png" alt="home"></a></li>
-                        <li><a href="#concept"><img src="images/contact_top.png" alt="concept"></a></li>
-                        <li><a href="#works"><img src="images/works_top.png" alt="works"></a></li>
+                        <li><a href="#concept"><img src="images/concept_top.png" alt="concept"></a></li>
+                        <li><a href="#home-works"><img src="images/works_top.png" alt="works"></a></li>
                         <li><a href="#skill"><img src="images/skill_top.png" alt="skill"></a></li>
                         <li><a href="#about"><img src="images/about_top.png" alt="about"></a></li>
-                        <li><a href="#contact"><img src="images/contact_top.png
-                            " alt="contact"></a></li>
+                        <li><a href="#contact"><img src="images/contact_top.png" alt="contact"></a></li>
                     </ul>
                 </nav>
             </div>
@@ -81,7 +80,7 @@
             <li><a href=""><img src="images/trrrrip.@2x-80.jpg" alt="trrrrip"></a></li>
 
         </ul>
-        <a href="" class="btn_works">MORE</a>
+        <a href="./works/index.html" class="btn_works">MORE</a>
 
     </section>
 
@@ -132,7 +131,7 @@
             </div>
 
         </div>
-        <a href="" class="btn_about">MORE</a>
+        <a href="./about/index.html" class="btn_about">MORE</a>
     </section>
 
 
