--- a/portfolio_morio_coding/works/index.html
+++ b/portfolio_morio_coding/works/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>森尾世里子｜portfolios</title>
+    <title>WORKS｜森尾世里子</title>
     <meta name="description" content="森尾世里子のポートフォリオです。">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
@@ -29,12 +29,12 @@
                 <h1 class="header_logo"><img src="images/rogo.png" alt="morio portfolio site."></h1>
                 <nav class="pc_nav">
                     <ul>
-                        <li><a href="#home"><img src="images/home_top.png" alt="home"></a></li>
-                        <li><a href="#concept"><img src="images/contact_top.png" alt="concept"></a></li>
-                        <li><a href="#works"><img src="images/works_top.png" alt="works"></a></li>
-                        <li><a href="#skill"><img src="images/skill_top.png" alt="skill"></a></li>
-                        <li><a href="#about"><img src="images/about_top.png" alt="about"></a></li>
-                        <li><a href="#contact"><img src="images/contact_top.png
+                        <li><a href="../index.html"><img src="images/home_top.png" alt="home"></a></li>
+                        <li><a href="../index.html#concept"><img src="images/concept_top.png" alt="concept"></a></li>
+                        <li><a href="../index.html#home-works"><img src="images/works_top.png" alt="works"></a></li>
+                        <li><a href="../index.html#skill"><img src="images/skill_top.png" alt="skill"></a></li>
+                        <li><a href="../index.html#about"><img src="images/about_top.png" alt="about"></a></li>
+                        <li><a href="../index.html#contact"><img src="images/contact_top.png
                             " alt="contact"></a></li>
                     </ul>
                 </nav>
@@ -51,11 +51,11 @@
     <div class="works">
         <ul class="works_wrap">
             <li><a href=""><img src="images/portfollilo.png" alt="portfolio"></a></li>
-            <li><a href=""><img src="images/designcafe@2x-80.jpg" alt="designcafe"></a></li>
-            <li><a href=""><img src="images/lifehair@2x-80.jpg" alt="lifehair"></a></li>
-            <li><a href=""><img src="images/trrrrip.@2x-80.jpg" alt="trrrrip"></a></li>
-            <li><a href=""></a><img src="images/commingsoon.png" alt="comingsoon"></li>
-            <li><a href=""></a><img src="images/commingsoon.png"></li>
+            <li><a href="./designcafe.html"><img src="images/designcafe@2x-80.jpg" alt="designcafe"></a></li>
+            <li><a href="./lifehair.html"><img src="images/lifehair@2x-80.jpg" alt="lifehair"></a></li>
+            <li><a href="./trrrip.html"><img src="images/trrrrip.@2x-80.jpg" alt="trrrrip"></a></li>
+            <li><a href=""></a><img src="images/comingsoon.png" alt="comingsoon"></li>
+            <li><a href=""></a><img src="images/comingsoon.png"></li>
 
         </ul>
 
