--- a/portfolio_morio_coding/works/lifehair.html
+++ b/portfolio_morio_coding/works/lifehair.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>森尾世里子｜portfolios</title>
+    <title>LIFE HAIR｜森尾世里子</title>
     <meta name="description" content="森尾世里子のポートフォリオです。">
     <link rel="shortcut icon" href="../android-chrome-192x192.png">
     <link rel="apple-touch-icon" href="../android-chrome-192x192.pngapple-touch-icon.png">
