第5回ポートフォリオ

--- a/portfolio_morio_coding/about/index.html
+++ b/portfolio_morio_coding/about/index.html
@@ -7,22 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT｜森尾世里子</title>
     <meta name="description" content="森尾世里子のポートフォリオです。">
-    <link rel="shortcut icon" href="../android-chrome-192x192.png">
-    <link rel="apple-touch-icon" href="../android-chrome-192x192.pngapple-touch-icon.png">
-    <link rel="icon" type="image/png" href="../android-chrome-192x192.pngandroid-chrome-256x256.png">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="apple-touch-icon" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="../android-chrome-192x192.png">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
+
 
     <!-- header-->
     <header>
         <div id="header" class="header">
             <div class="header_inner">
                 <h1 class="header_logo">
-                    <a href="../index.html"></a>
-                    <img src="images/rogo.png" alt="morio portfolio site.">
+                    <a href="../index.html">
+                        <img src="images/rogo.png" alt="morio portfolio site."></a>
                 </h1>
                 <nav class="pc_nav">
                     <ul>
@@ -31,7 +37,18 @@
                         <li><a href="../index.html#home-works"><img src="images/works_top.png" alt="works"></a></li>
                         <li><a href="../index.html#skill"><img src="images/skill_top.png" alt="skill"></a></li>
                         <li><a href="../index.html#about"><img src="images/about_top.png" alt="about"></a></li>
-                        <li><a href="../index.html#contact"><img src="images/contact_top.png" alt="contact"></a></li>
+                        <li><a href="../contact.html"><img src="images/contact_top.png" alt="contact"></a></li>
+                    </ul>
+                </nav>
+                <div class="sp_btn "><span></span></div>
+                <nav class="sp_nav">
+                    <ul>
+                        <li><a href="../index.html">HOME</a></li>
+                        <li><a href="../index.html#concept">CONCEPT</a></li>
+                        <li><a href="../index.html#home-works">WORKS</a></li>
+                        <li><a href="../index.html#skill">SKILL</a></li>
+                        <li><a href="../index.html#about">ABOUT</a></li>
+                        <li><a href="../contact.html">CONCEPT</a></li>
                     </ul>
                 </nav>
             </div>
@@ -64,8 +81,10 @@
         <p>好きなことを仕事にしたい、人と関わる仕事がしたいと探していた時に<br>WEBデザイナーという仕事を知り、会社を退職し2023年4月にオンラインスクール入学、7月卒業。</p>
         <p>会社を辞め、WEBデザイナーの勉強と向き合った４ヶ月間。<br>課題のレベルが高く、毎日夜遅くまで作業をすることが多かったですが、<br>好きなことだからこそ楽しく学ぶことができました。</p>
         <p>お客様に感謝し、お客様に感謝されるデザイナーを目指します。</p>
+        <a href="../index.html" class="btn_sp">HOME</a>
     </div>
     <div class="copyright"><img src="images/copyright.png" alt="copyright"></div>
+    <script src="../js/script.js"> </script>
 </body>
 
 </html>
