--- a/portfolio_morio_coding/thanks/index.html
+++ b/portfolio_morio_coding/thanks/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>森尾世里子｜portfolios</title>
+    <title>THANKS｜森尾世里子</title>
     <meta name="description" content="森尾世里子のポートフォリオです。">
-    <link rel="shortcut icon" href="../android-chrome-192x192.png">
-    <link rel="apple-touch-icon" href="../android-chrome-192x192.pngapple-touch-icon.png">
-    <link rel="icon" type="image/png" href="../android-chrome-192x192.pngandroid-chrome-256x256.png">
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="apple-touch-icon" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="../android-chrome-192x192.png">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -22,8 +26,8 @@
         <div id="header" class="header">
             <div class="header_inner">
                 <h1 class="header_logo">
-                    <a href="../index.html"></a>
-                    <img src="images/rogo.png" alt="morio portfolio site.">
+                    <a href="#../index.html">
+                        <img src="images/rogo.png" alt="morio portfolio site."></a>
                 </h1>
                 <nav class="pc_nav">
                     <ul>
@@ -35,9 +39,20 @@
                         <li><a href="../index.html#contact"><img src="images/contact_top.png" alt="contact"></a></li>
                     </ul>
                 </nav>
+                <div class="sp_btn "><span></span></div>
+                <nav class="sp_nav">
+                    <ul>
+                        <li><a href="../index.html">HOME</a></li>
+                        <li><a href="../index.html#concept">CONCEPT</a></li>
+                        <li><a href="../index.html#home-works">WORKS</a></li>
+                        <li><a href="../index.html#skill">SKILL</a></li>
+                        <li><a href="../index.html#about">ABOUT</a></li>
+                        <li><a href="../index.html#contact">CONCEPT</a></li>
+                    </ul>
+                </nav>
             </div>
-
         </div>
+
     </header>
 
     <!-- contact -->
@@ -51,6 +66,7 @@
         <a href="../index.html#home" class="btn_home">HOME</a>
     </div>
     <div class="copyright"><img src="images/copyright.png" alt="copyright"></div>
+    <script src="../js/script.js"> </script>
 </body>
 
 </html>
