--- a/portfolio_morio_coding/works/index.html
+++ b/portfolio_morio_coding/works/index.html
@@ -12,7 +12,7 @@
         href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="../android-chrome-256x256.png">
+    <link rel="icon" type="image/png" href="../android-chrome-192x192.png">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
@@ -20,32 +20,24 @@
 </head>
 
 <body>
-    <script>
-        //ハンバーガーメニュー 
-        $(function () {
-            $('.sp_btn,.sp_nav li').on('click', function () {
-                $('.sp_nav').fadeToggle();
-                $('.sp_btn').toggleClass('open');
-                // spボタンにopen classをつけたり外したりしたいので上記を追加
-            });
-        });
-    </script>
+
     <!-- header-->
     <header>
         <div id="header" class="header">
             <div class="header_inner">
                 <h1 class="header_logo">
-                    <a href="../index.html#header"></a>
-                    <img src="images/rogo.png" alt="morio portfolio site.">
+
+                    <a href="../index.html#header"><img src="images/logo.png" alt="morio portfolio site.">
+                    </a>
                 </h1>
                 <nav class="pc_nav">
                     <ul>
                         <li><a href="../index.html#header"><img src="images/home_top.png" alt="home"></a></li>
                         <li><a href="../index.html#concept"><img src="images/concept_top.png" alt="concept"></a></li>
-                        <li><a href="../index.html#home-works"><img src="images/works_top.png" alt="works"></a></li>
+                        <li><a href="index.html"><img src="images/works_top.png" alt="works"></a></li>
                         <li><a href="../index.html#skill"><img src="images/skill_top.png" alt="skill"></a></li>
-                        <li><a href="../index.html#about"><img src="images/about_top.png" alt="about"></a></li>
-                        <li><a href="../index.html#contact"><img src="images/contact_top.png" alt="contact"></a></li>
+                        <li><a href="../about/index.html"><img src="images/about_top.png" alt="about"></a></li>
+                        <li><a href="../contact.html"><img src="images/contact_top.png" alt="contact"></a></li>
                     </ul>
                 </nav>
                 <div class="sp_btn "><span></span></div>
@@ -55,8 +47,8 @@
                         <li><a href="../index.html#concept">CONCEPT</a></li>
                         <li><a href="../index.html#home-works">WORKS</a></li>
                         <li><a href="../index.html#skill">SKILL</a></li>
-                        <li><a href="../index.html#about">ABOUT</a></li>
-                        <li><a href="../index.html#contact">CONCEPT</a></li>
+                        <li><a href="../about/index.html">ABOUT</a></li>
+                        <li><a href="../contact.html">CONCEPT</a></li>
                     </ul>
                 </nav>
             </div>
@@ -64,8 +56,12 @@
     </header>
     <div class="ttl_wrap">
         <div class="ttl_box"></div>
-        <div><img src="images/works_top.png" alt="works"></div>
-        <p>作品一覧</p>
+        <div class="works_pc">
+            <h2><img src="images/works_top.png" alt="works"></h2>
+        </div>
+        <div class="ttl_text">
+            <p>作品一覧</p>
+        </div>
     </div>
     <div class="works">
         <ul class="works_wrap">
@@ -78,6 +74,7 @@
         </ul>
     </div>
     <div class="copyright"><img src="images/copyright.png" alt="copyright"></div>
+    <script src="../js/script.js"> </script>
 </body>
 
 </html>
