--- a/portfolio_morio_coding/works/lifehair.html
+++ b/portfolio_morio_coding/works/lifehair.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIFE HAIR｜森尾世里子</title>
+    <title>LIFEHAIR｜森尾世里子</title>
     <meta name="description" content="森尾世里子のポートフォリオです。">
-    <link rel="shortcut icon" href="../android-chrome-192x192.png">
-    <link rel="apple-touch-icon" href="../android-chrome-192x192.pngapple-touch-icon.png">
-    <link rel="icon" type="image/png" href="../android-chrome-192x192.pngandroid-chrome-256x256.png">
-
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="apple-touch-icon" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="../android-chrome-192x192.png">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -22,25 +27,50 @@
         <div id="header" class="header">
             <div class="header_inner">
                 <h1 class="header_logo">
-                    <a href="#../index.html"></a>
-                    <img src="images/rogo.png" alt="morio portfolio site.">
+                    <a href="#../index.html">
+                        <img src="images/logo.png" alt="morio portfolio site."></a>
                 </h1>
                 <nav class="pc_nav">
                     <ul>
                         <li><a href="../index.html#home"><img src="images/home_top.png" alt="home"></a></li>
                         <li><a href="../index.html#concept"><img src="images/concept_top.png" alt="concept"></a></li>
-                        <li><a href="../index.html#home-works"><img src="images/works_top.png" alt="works"></a></li>
+                        <li><a href="./index.html"><img src="images/works_top.png" alt="works"></a></li>
                         <li><a href="../index.html#skill"><img src="images/skill_top.png" alt="skill"></a></li>
-                        <li><a href="../index.html#about"><img src="images/about_top.png" alt="about"></a></li>
-                        <li><a href="../index.html#contact"><img src="images/contact_top.png" alt="contact"></a></li>
+                        <li><a href="../about/index.html"><img src="images/about_top.png" alt="about"></a></li>
+                        <li><a href="../contact.html"><img src="images/contact_top.png" alt="contact"></a></li>
+                    </ul>
+                </nav>
+                <div class="sp_btn "><span></span></div>
+                <nav class="sp_nav">
+                    <ul>
+                        <li><a href="../index.html">HOME</a></li>
+                        <li><a href="../index.html#concept">CONCEPT</a></li>
+                        <li><a href="./index.html">WORKS</a></li>
+                        <li><a href="../index.html#skill">SKILL</a></li>
+                        <li><a href="../about/index.html">ABOUT</a></li>
+                        <li><a href="../contact.htmlt">CONCEPT</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
-    <div class="ttl">
+    <div class="ttl_wrap_w">
         <div class="ttl_box"></div>
-        <h1><img src="images/works_ttl.png" alt="works"></h1>
+        <div class="works_pc">
+            <h2><img src="images/works_ttl.png" alt="works"></h2>
+        </div>
+        <div class="ttl_left">
+            <p>制作範囲</p>
+            <p>制作期間</p>
+            <p>ツール</p>
+        </div>
+        <div class="ttl_right">
+            <p>desigh</p>
+            <p>2week</p>
+            <p>Illustrator,Photoshop</p>
+        </div>
+    </div>
+    <div class="ttl_sp">
         <div class="ttl_left">
             <p>制作範囲</p>
             <p>制作期間</p>
@@ -54,7 +84,7 @@
     </div>
     <div class="text_wrap">
         <div class="wrap_mock"><img src="images/mockup.png" alt="lifehairmock"></div>
-        <h1><img src="images/lifehair_rogo.png" alt="LIFE HAIR"></h1>
+        <h3><img src="images/lifehair_rogo.png" alt="LIFE HAIR"></h3>
         <div class="text_top">
             <div class="text_box"></div>
             <p>課題内容</p>
@@ -74,6 +104,7 @@
         <div class="works_img"><img src="images/lifehair1366.png" alt=""></div>
     </div>
     <div class="copyright"><img src="images/copyright.png" alt="copyright"></div>
+    <script src="../js/script.js"> </script>
 </body>
 
 </html>
