第6回ポートフォリオ

--- a/portfolio_morio_coding/thanks/index.html
+++ b/portfolio_morio_coding/thanks/index.html
@@ -6,17 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THANKS｜森尾世里子</title>
-    <meta name="description" content="森尾世里子のポートフォリオです。">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <meta name="description" content="お問い合せいただき誠にありがとうございます。">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <link rel="icon" type="image/png" href="../android-chrome-192x192.png">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -47,7 +43,7 @@
                         <li><a href="../index.html#home-works">WORKS</a></li>
                         <li><a href="../index.html#skill">SKILL</a></li>
                         <li><a href="../index.html#about">ABOUT</a></li>
-                        <li><a href="../index.html#contact">CONCEPT</a></li>
+                        <li><a href="../index.html#contact">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
@@ -58,7 +54,7 @@
     <!-- contact -->
     <div class="fv_wrap">
         <img src="images/thanks_img.jpg" alt="男の子の写真">
-        <div class="fv_text"><img src="images/thanks_rogo.png" alt="I am this kind of person"></div>
+        <div class="fv_text "><img src="images/thanks_rogo.png" alt="I am this kind of person"></div>
     </div>
     <div class="text_inner">
         <p>お問い合わせいただき、誠にありがとうございます。３営業日以内にご返信させていただきます。</p>
