--- a/portfolio_morio_coding/works/trrrip.html
+++ b/portfolio_morio_coding/works/trrrip.html
@@ -6,17 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRRRRIP｜森尾世里子</title>
-    <meta name="description" content="森尾世里子のポートフォリオです。">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <meta name="description" content="デザインの課題で架空の旅行サイトのバナーデザインを作成いたしました。">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <link rel="icon" type="image/png" href="../android-chrome-192x192.png">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -48,61 +44,66 @@
                         <li><a href="./index.html">WORKS</a></li>
                         <li><a href="../index.html#skill">SKILL</a></li>
                         <li><a href="../about/index.html">ABOUT</a></li>
-                        <li><a href="../contact.html">CONCEPT</a></li>
+                        <li><a href="../contact.html">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
 
     </header>
-    <div class="ttl_wrap_w">
-        <div class="ttl_box"></div>
-        <div class="works_pc">
-            <h2><img src="images/works_ttl.png" alt="works"></h2>
+    <section id="trrrrip" class="trrrrip">
+        <div class="frame">
+            <div class="ttl_wrap_w">
+                <div class="ttl_box"></div>
+                <div class="works_pc">
+                    <h2><img src="images/works_logo.png" alt="works"></h2>
+                </div>
+
+                <div class="ttl_left">
+                    <p>制作範囲</p>
+                    <p>制作期間</p>
+                    <p>ツール</p>
+                </div>
+                <div class="ttl_right">
+                    <p>design</p>
+                    <p>1week</p>
+                    <p>Illustrator,Phoshop</p>
+                </div>
+            </div>
         </div>
-        <div class="ttl_left">
-            <p>制作範囲</p>
-            <p>制作期間</p>
-            <p>ツール</p>
+        <div class="ttl_sp">
+            <div class="ttl_left">
+                <p>制作範囲</p>
+                <p>制作期間</p>
+                <p>ツール</p>
+            </div>
+            <div class="ttl_right">
+                <p>design</p>
+                <p>1week</p>
+                <p>Illustrator,Phoshop</p>
+            </div>
         </div>
-        <div class="ttl_right">
-            <p>design</p>
-            <p>1week</p>
-            <p>Illustrator,Phoshop</p>
+        <div class="text_wrap">
+            <div class="wrap_mock fade-Trigger"><img src="images/trrrip_mock.png" alt="trrrrip"></div>
+            <h3><img src="images/trrrip_logo.png" alt="trrrrip"></h3>
+            <div class="text_top">
+                <div class="text_box"></div>
+                <p>課題内容</p>
+            </div>
+            <div class="text_inner">
+                <p>WEB広告用バナーデザイン制作の課題です。</p>
+                <p>ロゴのオレンジをアクセントカラーにして、旅の画像を組み合わせてデザインをして欲しい。<br>またアプリ版なのでタブレットで見ているような構成にしたい。</p>
+            </div>
+            <div class="text_top">
+                <div class="text_box"></div>
+                <p>制作後の感想</p>
+            </div>
+            <div class="text_inner">
+                <p>この課題では、主にPhotoshopの操作を中心に画像の切り抜き・背景写真の合成を学びました。<br>回転ツールを使用し装飾を入れたり、文字色に#000000を使わない、長体をかけない、図形やフォントは整数にするなど細かなデザインの技術を学びました。<br>なぜこの色なのかどうしてここに装飾をつけるのかなど、デザインの言語化がとても大切なことだと教わりデザインをする時には必ず意識して作るようになりました。
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="ttl_sp">
-        <div class="ttl_left">
-            <p>制作範囲</p>
-            <p>制作期間</p>
-            <p>ツール</p>
-        </div>
-        <div class="ttl_right">
-            <p>design</p>
-            <p>1week</p>
-            <p>Illustrator,Phoshop</p>
-        </div>
-    </div>
-    <div class="text_wrap">
-        <div class="wrap_mock"><img src="images/trrrip_mock.png" alt=""></div>
-        <h3><img src="images/trrrip_rogo.png" alt="LIFE HAIR"></h3>
-        <div class="text_top">
-            <div class="text_box"></div>
-            <p>課題内容</p>
-        </div>
-        <div class="text_inner">
-            <p>WEB広告用バナーデザイン制作の課題です。</p>
-            <p>ロゴのオレンジをアクセントカラーにして、旅の画像を組み合わせてデザインをして欲しい。<br>またアプリ版なのでタブレットで見ているような構成にしたい。</p>
-        </div>
-        <div class="text_top">
-            <div class="text_box"></div>
-            <p>制作後の感想</p>
-        </div>
-        <div class="text_inner">
-            <p>この課題では、主にPhotoshopの操作を中心に画像の切り抜き・背景写真の合成を学びました。<br>回転ツールを使用し装飾を入れたり、文字色に#000000を使わない、長体をかけない、図形やフォントは整数にするなど細かなデザインの技術を学びました。<br>なぜこの色なのかどうしてここに装飾をつけるのかなど、デザインの言語化がとても大切なことだと教わりデザインをする時には必ず意識して作るようになりました。
-            </p>
-        </div>
-    </div>
+    </section>
     <div class="copyright"><img src="images/copyright.png" alt="copyright"></div>
     <script src="../js/script.js"> </script>
 </body>
