--- a/portfolio_morio_coding/contact.html
+++ b/portfolio_morio_coding/contact.html
@@ -6,17 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT｜森尾世里子</title>
-    <meta name="description" content="森尾世里子のポートフォリオです。">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <meta name="description" content="お問い合わせはこちらからお願いいたします。">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" href="android-chrome-192x192.png">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 
@@ -46,47 +42,52 @@
                     <ul>
                         <li><a href="./index.html#home">HOME</a></li>
                         <li><a href="./index.html#concept">CONCEPT</a></li>
-                        <li><a href="./index.html#home-works">WORKS</a></li>
+                        <li><a href="./works/index.html">WORKS</a></li>
                         <li><a href="./index.html#skill">SKILL</a></li>
                         <li><a href="./about/index.html">ABOUT</a></li>
-                        <li><a href="contact.html">CONCEPT</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
+    <section id="form" class="form">
+        <div class="frame">
+            <div class="ttl_wrap">
+                <div class="ttl_box"></div>
+                <div class="contact_top">
+                    <h2 class="fade-Trigger"><img src="images/contact-sp.png" alt="contact"></h2>
+                </div>
+                <div class="ttl_text">
+                    <p>お問い合せ</p>
+                </div>
+            </div>
+        </div>
+        <div class="contact_page">
+            <div class="contact_text">
+                <p>当ポートフォリオサイトにご訪問いただき、誠にありがとうございます。<br>
+                    お問い合わせは下記フォームよりお願い致します。
+                </p>
+            </div>
+            <div class="form_wrap">
+                <form
+                    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSf-egHqpi1tICNCtpSPE9ZZKf8CtrBWNXuLJWexkqMs6rDH4Q/formRespons"
+                    method="post" target="hidden_iframe" onsubmit="submitted=true;">
+                    <label for="contact_name">NAME</label>
+                    <input type="text" id="contact_name" name="entry.2043331563" required>
+                    <label for="contact_mail">MAIL ADRESS</label>
+                    <input type="text" id="contact_mail" name="entry.289914287" required>
+                    <label>MESSAGE</label>
+                    <textarea name="entry.1988381245" required></textarea>
+                    <button class="btn_page">SEND</button>
 
-    <div class="ttl_wrap">
-        <div class="ttl_box"></div>
-        <div class="contact_top">
-            <h2><img src="images/contact_top.png" alt="contact"></h2>
+                </form>
+            </div>
+            <script type="text/javascript">var submitted = false;</script>
+            <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
+                onload="if(submitted){window.location='./thanks/index.html';}"></iframe>
         </div>
-        <div class="ttl_text">
-            <p>お問い合せ</p>
-        </div>
-    </div>
-    <div class="contact_page">
-        <div class="contact_text">
-            <p>当ポートフォリオサイトにご訪問いただき、誠にありがとうございます。<br>
-                お問い合わせは下記フォームよりお願い致します。
-            </p>
-        </div>
-        <form
-            action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSf-egHqpi1tICNCtpSPE9ZZKf8CtrBWNXuLJWexkqMs6rDH4Q/formRespons"
-            method="post" target="hidden_iframe" onsubmit="submitted=true;">
-            <label for="contact_name">NAME</label>
-            <input type="text" id="contact_name" name="entry.2043331563" required>
-            <label for="contact_mail">MAIL ADRESS</label>
-            <input type="text" id="contact_mail" name="entry.289914287" required>
-            <label>MESSAGE</label>
-            <textarea name="entry.1988381245" required></textarea>
-            <button class="btn_page">SEND</button>
-
-        </form>
-        <script type="text/javascript">var submitted = false;</script>
-        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
-            onload="if(submitted){window.location='./thanks/index.html';}"></iframe>
-    </div>
+    </section>
     <!-- copyright -->
     <div class="copyright"><img src="images/copyright.png" alt="copyright"></div>
     <script src="js/script.js"> </script>
