--- a/portfolio_morio_coding/works/designcafe.html
+++ b/portfolio_morio_coding/works/designcafe.html
@@ -6,17 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DESIGNCAFE｜森尾世里子</title>
-    <meta name="description" content="森尾世里子のポートフォリオです。">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <meta name="description" content="コーディングの課題でIllustratorのデザインカンプをもとに作成しました。">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <link rel="icon" type="image/png" href="../android-chrome-192x192.png">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -48,66 +44,69 @@
                         <li><a href="./index.html">WORKS</a></li>
                         <li><a href="../index.html#skill">SKILL</a></li>
                         <li><a href="../about/index.html">ABOUT</a></li>
-                        <li><a href="../contact.html">CONCEPT</a></li>
+                        <li><a href="../contact.html">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
+    <section id="desighcafe" class="desighcafe">
+        <div class="frame">
+            <div class="ttl_wrap_w">
+                <div class="ttl_box"></div>
+                <div class="works_pc">
+                    <h2><img src="images/works_logo.png" alt="works"></h2>
+                </div>
+                <div class="ttl_left">
+                    <p>制作範囲</p>
+                    <p>制作期間</p>
+                    <p>ツール</p>
+                </div>
+                <div class="ttl_right">
+                    <p>coding</p>
+                    <p>2week</p>
+                    <p>VScode</p>
+                </div>
+            </div>
+        </div>
+        <div class="ttl_sp">
+            <div class="ttl_left">
+                <p>制作範囲</p>
+                <p>制作期間</p>
+                <p>ツール</p>
+            </div>
+            <div class="ttl_right">
+                <p>coding</p>
+                <p>2week</p>
+                <p>VScode</p>
+            </div>
+        </div>
 
-    <div class="ttl_wrap_w">
-        <div class="ttl_box"></div>
-        <div class="works_pc">
-            <h2><img src="images/works_ttl.png" alt="works"></h2>
+        <div class="text_wrap">
+            <div class="wrap_mock fade-Trigger"><img src="images/dc_mock.png" alt="designcafe"></div>
+            <h3><img src="images/dc_logo.png" alt="DESIGNCAFE"></h3>
+            <div class="text_top">
+                <div class="text_box"></div>
+                <p>課題内容</p>
+            </div>
+            <div class="text_inner">
+                <p>llustratorから値を取得しコーディングする課題です。</p>
+                <p>地図の埋め込み<br>アセットの書き出し<br>FABの実装<br>jQueryでハンバーガーメニューを動かす<br>slickを使いスライダーを実装</p>
+            </div>
+            <div class="text_top">
+                <div class="text_box"></div>
+                <p>制作後の感想</p>
+            </div>
+            <div class="text_inner">
+                <p>コーディングの最終課題でデザインカンプを参考にCAFEサイトを作成する課題でした。<br>JavaScriptの実装が思うようにいかず、１箇所のつまづきに半日頭を悩ませたり、１歩進んでは立ち止まるを繰り返しやっとの思いで完成させた初めてのWEBページです。<br>コードが長くなればなるほど、記述の位置を探すのに何度もスクロールをして時間をかけてしまったり、PC版とSP版で表示の仕方が異なり出し分けするところで頭がごちゃごちゃになったりなど反省するポイントをあげるとキリがありませんが、一つのサイトを完成させた達成感とコードをたくさん書くことによって理解も深まりました。<br>PC版1週間、SP版1週間の計2週間で作成しました。
+                </p>
+            </div>
+            <div class="dc_img">
+                <div class="img_pc"><img src="images/dc_pc.jpg" alt="designcafe_pc"></div>
+                <div class="img_sp"><img src="images/dc_sp.jpg" alt="designcafe_sp"></div>
+            </div>
         </div>
-        <div class="ttl_left">
-            <p>制作範囲</p>
-            <p>制作期間</p>
-            <p>ツール</p>
-        </div>
-        <div class="ttl_right">
-            <p>coding</p>
-            <p>2week</p>
-            <p>VScode</p>
-        </div>
-    </div>
-    <div class="ttl_sp">
-        <div class="ttl_left">
-            <p>制作範囲</p>
-            <p>制作期間</p>
-            <p>ツール</p>
-        </div>
-        <div class="ttl_right">
-            <p>coding</p>
-            <p>2week</p>
-            <p>VScode</p>
-        </div>
-    </div>
-
-    <div class="text_wrap">
-        <div class="wrap_mock"><img src="images/dc_mock.png" alt=""></div>
-        <h3><img src="images/dc_logo.png" alt="DESIGNCAFE"></h3>
-        <div class="text_top">
-            <div class="text_box"></div>
-            <p>課題内容</p>
-        </div>
-        <div class="text_inner">
-            <p>llustratorから値を取得しコーディングする課題です。</p>
-            <p>地図の埋め込み<br>アセットの書き出し<br>FABの実装<br>jQueryでハンバーガーメニューを動かす<br>slickを使いスライダーを実装</p>
-        </div>
-        <div class="text_top">
-            <div class="text_box"></div>
-            <p>制作後の感想</p>
-        </div>
-        <div class="text_inner">
-            <p>コーディングの最終課題でデザインカンプを参考にCAFEサイトを作成する課題でした。<br>JavaScriptの実装が思うようにいかず、１箇所のつまづきに半日頭を悩ませたり、１歩進んでは立ち止まるを繰り返しやっとの思いで完成させた初めてのWEBページです。<br>コードが長くなればなるほど、記述の位置を探すのに何度もスクロールをして時間をかけてしまったり、PC版とSP版で表示の仕方が異なり出し分けするところで頭がごちゃごちゃになったりなど反省するポイントをあげるとキリがありませんが、一つのサイトを完成させた達成感とコードをたくさん書くことによって理解も深まりました。<br>PC版1週間、SP版1週間の計2週間で作成しました。
-            </p>
-        </div>
-        <div class="dc_img">
-            <div class="img_pc"><img src="images/dc_1366.png" alt="designcafe_pc"></div>
-            <div class="img_sp"><img src="images/dc_sp.png" alt="designcafe_sp"></div>
-        </div>
-    </div>
+    </section>
     <div class="copyright"><img src="images/copyright.png" alt="copyright"></div>
     <script src="../js/script.js"> </script>
 </body>
