--- a/portfolio_morio_coding/works/index.html
+++ b/portfolio_morio_coding/works/index.html
@@ -6,17 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WORKS｜森尾世里子</title>
-    <meta name="description" content="森尾世里子のポートフォリオです。">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <meta name="description" content="作品一覧ページです。作品は少ないですが、これからいろんな方とご縁で繋がり作品がたくさん増えることが楽しみです。">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <link rel="icon" type="image/png" href="../android-chrome-192x192.png">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -44,35 +40,43 @@
                 <nav class="sp_nav">
                     <ul>
                         <li><a href="../index.html#header">HOME</a></li>
-                        <li><a href="../index.html#concept">CONCEPT</a></li>
-                        <li><a href="../index.html#home-works">WORKS</a></li>
+                        <li><a href="index.html#concept">CONCEPT</a></li>
+                        <li><a href="index.html">WORKS</a></li>
                         <li><a href="../index.html#skill">SKILL</a></li>
                         <li><a href="../about/index.html">ABOUT</a></li>
-                        <li><a href="../contact.html">CONCEPT</a></li>
+                        <li><a href="../contact.html">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
-    <div class="ttl_wrap">
-        <div class="ttl_box"></div>
-        <div class="works_pc">
-            <h2><img src="images/works_top.png" alt="works"></h2>
+    <section id="works-list" class="works-list">
+        <div class="frame">
+            <div class="ttl_wrap">
+                <div class="ttl_box"></div>
+                <div class="works_pc">
+                    <h2><img src="images/works_logo.png" alt="works"></h2>
+                </div>
+                <div class="ttl_text">
+                    <p>作品一覧</p>
+                </div>
+            </div>
         </div>
-        <div class="ttl_text">
-            <p>作品一覧</p>
+        <div class="works">
+            <ul class="works_wrap">
+                <li class="fade-Trigger"><a href=""><img src="images/portfollilo.png" alt="portfolio"></a></li>
+                <li class="fade-Trigger"><a href="./designcafe.html"><img src="images/designcafe@2x-80.jpg"
+                            alt="designcafe"></a></li>
+                <li class="fade-Trigger"><a href="./lifehair.html"><img src="images/lifehair@2x-80.jpg"
+                            alt="lifehair"></a>
+                </li>
+                <li class="fadeTrigger"><a href="./trrrip.html"><img src="images/trrrrip.@2x-80.jpg" alt="trrrrip"></a>
+                </li>
+                <li class="fadeTrigger"><a href=""></a><img src="images/comingsoon.png" alt="comingsoon"></li>
+                <li class="fadeTrigger"><a href=""></a><img src="images/comingsoon.png"></li>
+            </ul>
         </div>
-    </div>
-    <div class="works">
-        <ul class="works_wrap">
-            <li><a href=""><img src="images/portfollilo.png" alt="portfolio"></a></li>
-            <li><a href="./designcafe.html"><img src="images/designcafe@2x-80.jpg" alt="designcafe"></a></li>
-            <li><a href="./lifehair.html"><img src="images/lifehair@2x-80.jpg" alt="lifehair"></a></li>
-            <li><a href="./trrrip.html"><img src="images/trrrrip.@2x-80.jpg" alt="trrrrip"></a></li>
-            <li><a href=""></a><img src="images/comingsoon.png" alt="comingsoon"></li>
-            <li><a href=""></a><img src="images/comingsoon.png"></li>
-        </ul>
-    </div>
+    </section>
     <div class="copyright"><img src="images/copyright.png" alt="copyright"></div>
     <script src="../js/script.js"> </script>
 </body>
