--- a/portfolio_morio_coding/works/lifehair.html
+++ b/portfolio_morio_coding/works/lifehair.html
@@ -6,17 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LIFEHAIR｜森尾世里子</title>
-    <meta name="description" content="森尾世里子のポートフォリオです。">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
+    <meta name="description" content="デザインの課題で架空の美容室サイトを作成いたしました。">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <link rel="icon" type="image/png" href="../android-chrome-192x192.png">
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 </head>
 
@@ -48,61 +44,65 @@
                         <li><a href="./index.html">WORKS</a></li>
                         <li><a href="../index.html#skill">SKILL</a></li>
                         <li><a href="../about/index.html">ABOUT</a></li>
-                        <li><a href="../contact.htmlt">CONCEPT</a></li>
+                        <li><a href="../contact.htmlt">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
-    <div class="ttl_wrap_w">
-        <div class="ttl_box"></div>
-        <div class="works_pc">
-            <h2><img src="images/works_ttl.png" alt="works"></h2>
+    <section id="lifehair" class="lifehair">
+        <div class="frame">
+            <div class="ttl_wrap_w">
+                <div class="ttl_box"></div>
+                <div class="works_pc">
+                    <h2><img src="images/works_logo.png" alt="works"></h2>
+                </div>
+                <div class="ttl_left">
+                    <p>制作範囲</p>
+                    <p>制作期間</p>
+                    <p>ツール</p>
+                </div>
+                <div class="ttl_right">
+                    <p>desigh</p>
+                    <p>2week</p>
+                    <p>Illustrator,Photoshop</p>
+                </div>
+            </div>
         </div>
-        <div class="ttl_left">
-            <p>制作範囲</p>
-            <p>制作期間</p>
-            <p>ツール</p>
+        <div class="ttl_sp">
+            <div class="ttl_left">
+                <p>制作範囲</p>
+                <p>制作期間</p>
+                <p>ツール</p>
+            </div>
+            <div class="ttl_right">
+                <p>desigh</p>
+                <p>2week</p>
+                <p>Illustrator,Photoshop</p>
+            </div>
         </div>
-        <div class="ttl_right">
-            <p>desigh</p>
-            <p>2week</p>
-            <p>Illustrator,Photoshop</p>
+        <div class="text_wrap">
+            <div class="wrap_mock fade-Trigger"><img src="images/mockup.png" alt="lifehairmock"></div>
+            <h3><img src="images/lifehair_logo.png" alt="LIFE HAIR"></h3>
+            <div class="text_top">
+                <div class="text_box"></div>
+                <p>課題内容</p>
+            </div>
+            <div class="text_inner">
+                <p>実践に近いデザインを作成する課題です。</p>
+                <p>10周年を機にサイトをリニューアル<br>認知向上・SNSフォーローUPを目的とする<br>ターゲットは20代〜50代女性<br>コーポレートカラーのピンクを基調とする</p>
+            </div>
+            <div class="text_top">
+                <div class="text_box"></div>
+                <p>制作のPOINT</p>
+            </div>
+            <div class="text_inner">
+                <p>ピンクをベースとするため甘くなり過ぎないようにシンプルにまとめました。<br>conceptでインパクトを与える画像を配置し、お店の伝えたいメッセージをダイレクトに伝え、Styleには様々な年齢層の写真を使用しどの年代の方でもスタイリングがイメージできるように写真を選択しました。<br>予約は一番目立つようにさせたかったのでをグローバルメニューに固定させず、FABでどの位置にいても予約ができるようにしました。<br>フッターの中のSNSの情報は、アイコンだけではなく文字も組み合わせ分かりやすくしボタンを大きくさせることで目立たせる工夫をしました。<br>この課題では初めてワイヤーフレームから作成し、デザインカンプまで２週間で作成しました。
+                </p>
+            </div>
+            <div class="works_img"><img src="images/lifehair_pc.jpg" alt="lifehair"></div>
         </div>
-    </div>
-    <div class="ttl_sp">
-        <div class="ttl_left">
-            <p>制作範囲</p>
-            <p>制作期間</p>
-            <p>ツール</p>
-        </div>
-        <div class="ttl_right">
-            <p>desigh</p>
-            <p>2week</p>
-            <p>Illustrator,Photoshop</p>
-        </div>
-    </div>
-    <div class="text_wrap">
-        <div class="wrap_mock"><img src="images/mockup.png" alt="lifehairmock"></div>
-        <h3><img src="images/lifehair_rogo.png" alt="LIFE HAIR"></h3>
-        <div class="text_top">
-            <div class="text_box"></div>
-            <p>課題内容</p>
-        </div>
-        <div class="text_inner">
-            <p>実践に近いデザインを作成する課題です。</p>
-            <p>10周年を機にサイトをリニューアル<br>認知向上・SNSフォーローUPを目的とする<br>ターゲットは20代〜50代女性<br>コーポレートカラーのピンクを基調とする</p>
-        </div>
-        <div class="text_top">
-            <div class="text_box"></div>
-            <p>制作のPOINT</p>
-        </div>
-        <div class="text_inner">
-            <p>ピンクをベースとするため甘くなり過ぎないようにシンプルにまとめました。<br>conceptでインパクトを与える画像を配置し、お店の伝えたいメッセージをダイレクトに伝え、Styleには様々な年齢層の写真を使用しどの年代の方でもスタイリングがイメージできるように写真を選択しました。<br>予約は一番目立つようにさせたかったのでをグローバルメニューに固定させず、FABでどの位置にいても予約ができるようにしました。<br>フッターの中のSNSの情報は、アイコンだけではなく文字も組み合わせ分かりやすくしボタンを大きくさせることで目立たせる工夫をしました。<br>この課題では初めてワイヤーフレームから作成し、デザインカンプまで２週間で作成しました。
-            </p>
-        </div>
-        <div class="works_img"><img src="images/lifehair1366.png" alt=""></div>
-    </div>
+    </section>
     <div class="copyright"><img src="images/copyright.png" alt="copyright"></div>
     <script src="../js/script.js"> </script>
 </body>
